tests/negative/import_too_large.far
import oversize_import

fun main() {
  return 0
}
